[package]
name = "stwo-cairo-dev-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Development utilities and tools for Stwo Cairo prover"

[[bin]]
name = "extract_mem_trace"
required-features = ["stwo-cairo-adapter/extract-mem-trace"]

[features]
cuda-backend = ["stwo-cairo-prover/cuda-backend", "dep:vortexstark"]

[[bin]]
name = "run_and_prove_cuda"
required-features = ["cuda-backend"]

[[bin]]
name = "prove_cuda_from_input"
required-features = ["cuda-backend"]

[dependencies]
anyhow.workspace = true
cairo-air = { path = "../cairo-air", version = "~1.2.2" }
clap.workspace = true
serde.workspace = true
starknet-ff.workspace = true
sonic-rs.workspace = true
stwo-cairo-common = { path = "../common", version = "~1.2.2" }
stwo-cairo-adapter = { path = "../adapter", version = "~1.2.2" }
stwo-cairo-serialize = { path = "../cairo-serialize", version = "~1.2.2" }
stwo.workspace = true
stwo-cairo-prover = { path = "../prover", version = "~1.2.2" }
tracing-subscriber.workspace = true
thiserror.workspace = true
tracing.workspace = true
log.workspace = true
regex = "1.11.1"
num-bigint = "0.4.6"
bincode = "1.3.3"
cairo-lang-runner = "=2.15.0"
cairo-lang-executable = "=2.15.0"
cairo-lang-utils = "=2.15.0"

serde_json.workspace = true
cairo-vm.workspace = true

vortexstark = { git = "https://github.com/garrick247/VortexSTARK.git", rev = "f2089a388ab983142f262e9445ec2cf9ecb33291", optional = true }

[dev-dependencies]
tempfile = "3.8.0"
